--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=6.0.2",
     "django-environ>=0.13.0",
+    "django-phonenumber-field[phonenumbers]>=8.4.0",
     "django-unfold>=0.80.2",
 ]
 
